Added Redis Stream implementation and design